# RealEstateSearch

./: .env-sample  .env.sample  .gitignore  .prod-sample  ReadMe.txt  docker-compose-deploy.yml  docker-compose.yml  dockerfile  requirements.txt
RealEstateSearch/: cards.txt  grid.txt  links.txt  log.txt  manage.py  olx-detail.html  pyproject.toml  pytest.ini  scrapLoger.txt  soup.txt  testParams.py
RealEstateSearch/fixtures/: defaultData.json  olxSearch.json
RealEstateSearch/olxSearch/: admin.py  apps.py  forms.py  models.py  serializer.py  urls.py  views.py
RealEstateSearch/olxSearch/migrations/: 0001_initial.py  0002_htmltagsnametofind.py  0003_buildingtype_apartment_date_published2.py  0003_searchset_userssearchset.py  0004_apartment_buildingtype.py  0005_alter_apartment_buildingtype.py  0006_city_searchingsettings_city.py  0006_delete_htmltagsnametofind.py  0007_alter_apartment_area_alter_apartment_price_and_more.py  0008_alter_searchingsettings_date_created.py  0009_alter_searchingsettings_date_created.py  0010_alter_searchingsettings_date_created.py  0011_alter_searchingsettings_date_created.py  0012_alter_apartment_category_and_more.py  0012_alter_searchingsettings_date_created.py  0013_alter_searchingsettings_date_created.py  0014_alter_searchingsettings_date_created.py  0015_alter_searchingsettings_date_created.py  0016_alter_searchingsettings_date_created.py  0017_alter_searchingsettings_date_created.py  (+7 more)
RealEstateSearch/realEstateSearch/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
RealEstateSearch/scrapingApp/: apps.py  tasks.py
(+101 files in other folders)
