[tool.poetry]
name = "RealEstateSearch"
version = "0.1.0"
license = "GNU General Public License v3"
authors = ["Mariusz Majewski"]
description = "RealEstateSearch"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
Django = "4.1.6"
asgiref = "3.6.0"
celery = "5.2.7"
django-celery-beat = "2.4.0"
django-celery-results = "2.4.0"
python-crontab = "2.7.1"
redis = "4.4.0"
sqlparse = "0.4.3"
flower = "1.2.0"
uWSGI = "2.0.20"
django-crispy-forms = "2.0"
crispy-bootstrap5 = "0.7"
Pillow = "9.4.0"
beautifulsoup4 = "4.11.1"
certifi = "2022.9.24"
charset-normalizer = "2.1.1"
djangorestframework = "3.14.0"
idna = "3.4"
pytz = "2022.6"
requests = "2.28.1"
soupsieve = "2.3.2.post1"
tzdata = "2022.6"
urllib3 = "1.26.12"
gunicorn = "20.1.0"
uvicorn = "0.18.2"
markdown = "^3.4.3"
django-filter = "^23.1"
psycopg2-binary = "2.9.5"

[build-system]
requires = ["poetry-core = 1.3.2"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.RealEstateSearch.dependencies]
black = "^23.1.0"
[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
faker = "^18.4.0"
factory-boy = "^3.2.1"
pytest-django = "^4.5.2"
pytest-cov = "^4.0.0"

